got edit recipe working!

--- a/client/recipes/recipe.html
+++ b/client/recipes/recipe.html
@@ -1,5 +1,5 @@
 <template name="recipe">
-	<td><a class="btn btn-warning"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></a></td>
+	<td><a class="btn btn-default"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></a></td>
 	<td>{{title}}</td>
 	<td>{{rack}}</td>
 	<td>{{preptime}}</td>
