--- a/client/recipes/recipeForm.html
+++ b/client/recipes/recipeForm.html
@@ -23,7 +23,7 @@
 		<div class="form-group">
 			<label for="recipeRack" class="col-sm-2 control-label">Rack</label>
 			<div class="col-sm-3">
-				<input type="text" class="form-control" id="recipeRack" name="recipeRack" value="{{shelf}}">
+				<input type="text" class="form-control" id="recipeRack" name="recipeRack" value="{{rack}}">
 				<p class="help-block">If you don&rsquo;t put it on a rack, your recipe will be added to the <code>default</code> rack.</p>
 			</div>
 			
@@ -78,7 +78,7 @@
 			</div>
 			<div class="col-xs-3">
 				<select id="prepTimeUnits" class="form-control">
-					<option selected>minutes</option>
+					<option>minutes</option>
 					<option>hours</option>
 					<option>days</option>
 				</select>
@@ -105,7 +105,7 @@
 			</div>
 			<div class="col-xs-3">
 				<select id="cookingTimeUnits" class="form-control">
-					<option selected>minutes</option>
+					<option>minutes</option>
 					<option>hours</option>
 					<option>days</option>
 				</select>
@@ -126,7 +126,7 @@
 		<legend>Additional comments</legend>
 		<div class="form-group">
 			<div class="col-sm-8 col-sm-offset-2">
-				<textarea id="comments" rows="4" class="form-control"></textarea>
+				<textarea id="comments" rows="4" class="form-control">{{comments}}</textarea>
 				<p class="help-block">Anything you want to add.</p>
 			</div>
 		</div>
