all recipes page working

--- a/client/people/profile.html
+++ b/client/people/profile.html
@@ -28,9 +28,9 @@
 				</tr>
 			</thead>
 			<tbody>
-				{{#each booksData}}
+				{{#each recipesData}}
 				<tr>
-					{{> book}}
+					{{> recipe}}
 				</tr>
 				{{/each}}
 			</tbody>
