--- a/client/recipes/recipe.html
+++ b/client/recipes/recipe.html
@@ -6,7 +6,7 @@
 	<td>{{cooktime}}</td>
 	<td>{{tags}}</td>
 	<td>
-		<a class="btn btn-default"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
+		<a class="view-btn btn btn-default"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
 		<a class="edit-btn btn btn-info"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
 		<a class="delete-btn btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
 	</td>
