--- a/client/people/profile.html
+++ b/client/people/profile.html
@@ -1,6 +1,6 @@
 <template name="profile">
 	<div class="jumbotron">
-		<h2>{{profile.firstName}} {{profile.lastName}} -- {{profile.userName}}
+		<h2>{{profile.firstName}} {{profile.lastName}} &mdash; {{profile.userName}}
 			{{#if ownPost}}
 			<a href="{{pathFor 'profileEdit'}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
 			{{/if}}
@@ -18,12 +18,12 @@
 		<table class="table table-hover table-striped">
 			<thead>
 				<tr>
+					<th>&nbsp;</th>
 					<th>Title</th>
-					<th>Author</th>
-					<th>Shelf</th>
-					<th>ISBN</th>
+					<th>Rack</th>
+					<th>Prep time</th>
+					<th>Cooking time</th>
 					<th>Tags</th>
-					<th>Status</th>
 					<th>&nbsp;</th>
 				</tr>
 			</thead>
