welcome page fixes, able to talk to app

--- a/client/about.html
+++ b/client/about.html
@@ -1,7 +1,7 @@
 <template name="about">
 <h1>About</h1>
 
-<p>Reciperack was cobbled together by Jessica Huynh using HTML5, CSS3, Twitter Bootstrap, and the Meteor framework for JavaScript. It is designed to be an easy way to categorize and sort your recipes, without any additional cruft.</p>
+<p>Reciperack was cobbled together by <a href="http://jessicahuynh.info/">Jessica Huynh</a> using HTML5, CSS3, Twitter Bootstrap, and the Meteor framework for JavaScript. It is designed to be an easy way to categorize and sort your recipes, without any additional cruft.</p>
 
 
 </template>
