--- a/client/recipes/allrecipes.html
+++ b/client/recipes/allrecipes.html
@@ -22,7 +22,7 @@
 	<tbody>
 		{{#each recipesData}}
 		<tr>
-			<td><a class="btn btn-default"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></a></td>
+			<!-- <td><a class="btn btn-default"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span></a></td> -->
 			<td>{{title}}</td>
 			<td>{{creator}}</td>
 			<td>{{rack}}</td>
