get rid of favoriting stuff for now

--- a/client/recipes/allrecipes.html
+++ b/client/recipes/allrecipes.html
@@ -9,7 +9,7 @@
 <table class="table table-hover table-striped" id="booksTable">
 	<thead>
 		<tr>
-			<th>&nbsp;</th>
+			<!-- <th>&nbsp;</th> -->
 			<th>Title</th>
 			<th>Created by</th>
 			<th>Rack</th>
