--- a/client/people/profile.html
+++ b/client/people/profile.html
@@ -18,7 +18,7 @@
 		<table class="table table-hover table-striped">
 			<thead>
 				<tr>
-					<th>&nbsp;</th>
+					<!-- <th>&nbsp;</th> -->
 					<th>Title</th>
 					<th>Rack</th>
 					<th>Prep time</th>
