--- a/client/recipes/myrecipes.html
+++ b/client/recipes/myrecipes.html
@@ -6,7 +6,7 @@
 <table class="table table-hover table-striped">
 	<thead>
 		<tr>
-			<th>&nbsp;</th>
+			<!-- <th>&nbsp;</th> -->
 			<th>Title</th>
 			<th>Rack</th>
 			<th>Prep time</th>
