sort all recipes, filter ingredients start

--- a/client/recipes/allrecipes.html
+++ b/client/recipes/allrecipes.html
@@ -2,8 +2,8 @@
 <h1>All Recipes</h1>
 <div>
 	<ul class="nav nav-pills" id="recipeSort">
-		<li role="presentation" class="active"><a href="#" id="addedAt">Most recently added</a></li>
-		<!--<li role="presentation"><a href="#" id="title">Title</a></li>-->
+		<li role="presentation" class="active" data-toggle="pill"><a href="#" id="addedAt">Most recently added</a></li>
+		<li role="presentation" data-toggle="pill"><a href="#" id="title">Title</a></li>
 	</ul>
 </div>
 <table class="table table-hover table-striped" id="booksTable">
