--- a/client/filter.html
+++ b/client/filter.html
@@ -9,20 +9,36 @@
 				</div>
 				<div class="panel-body"><form id="filterIngred">
 					<table class="table table-striped table-hover table-condensed">
-						<tbody id="ingredList">
-						</tbody>
 						<tfoot>
 							<tr>
 								<td><input type="text" class="form-control" id="ingred"></td>
 								<td><button type="submit" class="btn btn-primary" id="addIngred"><span class="glyphicon glyphicon-plus"></span></button></td>
 							</tr>
 						</tfoot>
+						<tbody id="ingredList">
+						</tbody>
 					</table>
 				</form></div>
 			</div>
 		</div>
 
 		<div class="col-xs-8">
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>Title</th>
+						<th>Ingredients</th>
+					</tr>
+				</thead>
+				<tbody>
+					{{#each recipesData}}
+					<tr>
+						<td><a href="/viewRecipe/{{recipeId}}" class="view-recipe">{{title}}</a></td>
+						<td>{{ingredients}}</td>
+					</tr>
+					{{/each}}
+				</tbody>
+			</table>
 		</div>
 	</div>
 </template>
