--- a/client/stats.html
+++ b/client/stats.html
@@ -1,8 +1,4 @@
 <template name="stats">
 <h1>Statistics</h1>
-<button id="drawIt" class="btn btn-success">Draw it!</button>
-<hr />
-<canvas id="drawSpace" width="600" height="300">
-	Your browser doesn't support canvases&hellip;
-</canvas>
+<div id="recipeRacksChart"></div>
 </template>
