--- a/client/stats.html
+++ b/client/stats.html
@@ -1,4 +1,15 @@
 <template name="stats">
-<h1>Statistics</h1>
+	{{#contentFor "headerButtonLeft"}}
+		{{>ionNavBackButton path="index"}}
+	{{/contentFor}}
+	
+	{{#contentFor "headerTitle"}}
+	<h1 class='title'>Statistics</h1>
+	{{/contentFor}}
+	
+{{#ionView}}
+{{#ionContent class="padding"}}
 <div id="recipeRacksChart"></div>
+{{/ionContent}}
+{{/ionView}}
 </template>
