--- a/client/filter.html
+++ b/client/filter.html
@@ -2,7 +2,7 @@
 	<h1 class="page-header">Filter</h1>
 
 	<div class="row">
-		<div class="col-xs-4">
+		<div class="col-md-4">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h3 class="panel-title">Filter recipes by ingredient</h3>
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 
-		<div class="col-xs-8">
+		<div class="col-md-8">
 			<table class="table table-striped table-hover">
 				<thead>
 					<tr>
